Alteração no app.properties para fixar a moeda em  real

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl.auto=update
 spring.h2.console.enabled=true
 
 server.servlet.context-path=/scd
+spring.web.locale=pt_BR
+spring.web.locale-resolver=fixed
